--- a/ProyectoApi_Jueves/ProyectoApi_Jueves/appsettings.json
+++ b/ProyectoApi_Jueves/ProyectoApi_Jueves/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "settings": {
+    "SecretKey": "xrhzMQapbTXqHjAVPhvAvGGxVHpKSVZR"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
