--- a/ProyectoApi_Jueves/ProyectoApi_Jueves/appsettings.json
+++ b/ProyectoApi_Jueves/ProyectoApi_Jueves/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=EDUARDO;Database=jueves_db;Trusted_Connection=True;"
+  },
   "settings": {
     "SecretKey": "xrhzMQapbTXqHjAVPhvAvGGxVHpKSVZR"
   },
