--- a/ProyectoWeb_Jueves/ProyectoWeb_Jueves/appsettings.json
+++ b/ProyectoWeb_Jueves/ProyectoWeb_Jueves/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "settings": {
+    "UrlApi": "https://localhost:7274/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
