--- a/ProyectoWeb_Jueves/ProyectoWeb_Jueves/appsettings.json
+++ b/ProyectoWeb_Jueves/ProyectoWeb_Jueves/appsettings.json
@@ -1,6 +1,7 @@
 {
   "settings": {
-    "UrlApi": "https://localhost:7274/"
+    "UrlApi": "https://localhost:7274/",
+    "SecretKey": "xrhzMQapbTXqHjAVPhvAvGGxVHpKSVZR"
   },
   "Logging": {
     "LogLevel": {
