--- a/ProyectoApi_Jueves/ProyectoApi_Jueves/appsettings.json
+++ b/ProyectoApi_Jueves/ProyectoApi_Jueves/appsettings.json
@@ -3,7 +3,9 @@
     "DefaultConnection": "Server=EDUARDO;Database=jueves_db;Trusted_Connection=True;"
   },
   "settings": {
-    "SecretKey": "xrhzMQapbTXqHjAVPhvAvGGxVHpKSVZR"
+    "SecretKey": "xrhzMQapbTXqHjAVPhvAvGGxVHpKSVZR",
+    "correoSMTP": "ecalvo90415@ufide.ac.cr",
+    "claveSMTP": ""
   },
   "Logging": {
     "LogLevel": {
